--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
-  text-align: center;
+html, body{
+  font-family: 'Quicksand', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.component{
   display: flex;
   flex-direction: column;
+  margin: 0 auto;
+  max-width: 300px;
+  background-color: rgb(195, 162, 151);
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 10px 5px 5px rgb(167, 167, 167);
+  border: solid black 2px
 }
 
-.App-link {
-  color: #61dafb;
+button{
+  width: 100px;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: rgb(127, 210, 255);
+  font-family: 'Quicksand', sans-serif;
+  font-weight: bolder;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:hover{
+  width: 100px;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: rgb(127, 210, 255);
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  font-family: 'Quicksand', sans-serif;
+  font-weight: bolder;
 }
